[gd_scene load_steps=25 format=3 uid="uid://dwg4kahwpqddq"]

[ext_resource type="Script" uid="uid://bn1dvgupxag0u" path="res://scripts/ui/main_menu.gd" id="1_sl1te"]
[ext_resource type="Texture2D" uid="uid://d2h6wdr5m2fue" path="res://assets/images/button_1.atlastex" id="2_1g8jr"]
[ext_resource type="Theme" uid="uid://dtiv81upl2jvn" path="res://assets/ui_theme.theme" id="3_1g8jr"]
[ext_resource type="Texture2D" uid="uid://bolamf8i44a2e" path="res://assets/images/button_2.atlastex" id="4_uhagc"]
[ext_resource type="Texture2D" uid="uid://bo4rtroutsnio" path="res://assets/images/button_3.atlastex" id="5_btxxm"]
[ext_resource type="Texture2D" uid="uid://bthiyrqxlarkg" path="res://assets/images/button_4.atlastex" id="6_wb0q5"]

[sub_resource type="LabelSettings" id="LabelSettings_yqeox"]
font_size = 120

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fe2o3"]
bg_color = Color(0, 0.6, 0.6, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y2j7i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fe2o3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ekit"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uhagc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y1h5l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7suek"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_otr3d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btxxm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pw24t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wb0q5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q85j6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8g5eo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n4uci"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5dct7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_877pj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ayp64"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_sl1te")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
layer = 5

[node name="MenuLabel" type="Label" parent="CanvasLayer"]
offset_left = 682.0
offset_top = 67.0
offset_right = 1276.0
offset_bottom = 232.0
theme = ExtResource("3_1g8jr")
text = "NAZVANIE"
label_settings = SubResource("LabelSettings_yqeox")

[node name="PlayButton" type="Button" parent="CanvasLayer"]
offset_left = 770.0
offset_top = 390.0
offset_right = 1523.0
offset_bottom = 636.0
scale = Vector2(0.5, 0.5)
theme_override_styles/normal = SubResource("StyleBoxFlat_fe2o3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_y2j7i")
theme_override_styles/hover = SubResource("StyleBoxEmpty_fe2o3")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8ekit")
icon = ExtResource("2_1g8jr")

[node name="Label" type="Label" parent="CanvasLayer/PlayButton"]
layout_mode = 0
offset_left = 306.0
offset_top = 66.0
offset_right = 454.0
offset_bottom = 158.0
theme = ExtResource("3_1g8jr")
text = "PLAY"

[node name="SettingsButton" type="Button" parent="CanvasLayer"]
offset_left = 774.0
offset_top = 540.0
offset_right = 1536.0
offset_bottom = 778.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("3_1g8jr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_uhagc")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_y1h5l")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7suek")
theme_override_styles/focus = SubResource("StyleBoxEmpty_otr3d")
icon = ExtResource("4_uhagc")

[node name="Label" type="Label" parent="CanvasLayer/SettingsButton"]
layout_mode = 0
offset_left = 244.0
offset_top = 72.0
offset_right = 523.0
offset_bottom = 159.0
theme = ExtResource("3_1g8jr")
text = "SETTINGS"

[node name="CreditsButton" type="Button" parent="CanvasLayer"]
offset_left = 775.0
offset_top = 681.0
offset_right = 1528.0
offset_bottom = 942.0
scale = Vector2(0.5, 0.5)
theme_override_styles/normal = SubResource("StyleBoxEmpty_btxxm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_pw24t")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wb0q5")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_q85j6")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8g5eo")
icon = ExtResource("5_btxxm")

[node name="Label" type="Label" parent="CanvasLayer/CreditsButton"]
layout_mode = 0
offset_left = 240.0
offset_top = 86.0
offset_right = 491.0
offset_bottom = 178.0
theme = ExtResource("3_1g8jr")
text = "CREDITS"

[node name="ExitButton" type="Button" parent="CanvasLayer"]
offset_left = 773.0
offset_top = 840.0
offset_right = 1520.0
offset_bottom = 1069.0
scale = Vector2(0.5, 0.5)
theme_override_styles/normal = SubResource("StyleBoxEmpty_n4uci")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5dct7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_877pj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ayp64")
text = "
"
icon = ExtResource("6_wb0q5")

[node name="Label" type="Label" parent="CanvasLayer/ExitButton"]
layout_mode = 0
offset_left = 298.0
offset_top = 66.0
offset_right = 446.0
offset_bottom = 158.0
theme = ExtResource("3_1g8jr")
text = "EXIT"

[connection signal="button_up" from="CanvasLayer/PlayButton" to="." method="_on_play_button_button_up"]
[connection signal="button_up" from="CanvasLayer/SettingsButton" to="." method="_on_settings_button_button_up"]
[connection signal="button_up" from="CanvasLayer/ExitButton" to="." method="_on_exit_button_button_up"]
